# openai-agents-rag-fastapi-docker-postgresql-alembic

./: .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.localstack.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 72e05dedbe30_init_tables.py
docs/: API_ENDPOINTS.md  ENVIRONMENT.md  RAG.md  README.md
src/: app.py  config.py
src/api/: schemas.py
src/api/routers/: agent_router.py  assistant.py  chat.py  research.py
src/assistant/: main.py  tools.py
src/chat/: main.py
src/contracts/: embedder.py  ingestion.py
src/db/: __init__.py  agent_session.py  database.py  models.py
src/prompts/: assistant_system.md  chat_system.md  loader.py  research_planner_system.md  research_search_system.md  research_writer_system.md
src/rag/: simple.py
src/research/: main.py  manager.py
src/research/agents/: planner_agent.py  search_agent.py  writer_agent.py
src/services/: pinecone.py  voyage.py
src/utils/: hooks.py  logging.py  secrets.py
