[project]
name = "akin-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Kamal Shrestha",email = "kshrestha1@godaddy.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "openai-agents[sqlalchemy] (>=0.17.5,<0.18.0)",
    "fastapi (>=0.137.1,<0.138.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "greenlet (>=3.5.1,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pinecone (>=6.0.0,<10.0.0)",
    "voyageai (>=0.4.0,<0.5.0)",
    "boto3 (>=1.35.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "*", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyclean (>=3.7.0,<4.0.0)",
]
